# Delay-EaseV3

./: .gitignore  Makefile  README.md  env_example.txt  main.py  pyproject.toml
data/claims/: DE_20250831_133758_test_user_eticket_test1.json  DE_20250831_173202_test_user_eticket_test1.json  DE_20250901_143612_test_user_eticket_test1.json  DE_20250901_143828_test_user.json  DE_20250901_143848_test_user.json  DE_20250901_144012_test_user.json  DE_20250901_144102_test_user.json  DE_20250901_144142_test_user_eticket_test1.json  DE_20250901_144238_test_user_eticket_test3.json  DE_20250901_144600_test_user.json  DE_20250901_144647_test_user.json  DE_20250901_150258_test_user.json  DE_20250901_191843_test_user_eticket_test1.json  DE_20250901_191920_test_user_eticket_test1.json  DE_20250901_192038_test_user.json  DE_20250901_194537_test_user.json  DE_20250901_204250_test_user.json
data/reference_data/: delay_repay_percentages_single_tickets.csv  toc_code.csv
data/results/: delay_ease_result_20250901_143828.json  delay_ease_result_20250901_143848.json  delay_ease_result_20250901_143903.json  delay_ease_result_20250901_144012.json  delay_ease_result_20250901_144102.json  delay_ease_result_20250901_144600.json  delay_ease_result_20250901_144647.json  delay_ease_result_20250901_150258.json  delay_ease_result_20250901_192038.json  delay_ease_result_20250901_194537.json  delay_ease_result_20250901_200655.json  delay_ease_result_20250901_204250.json
src/delay_ease/: __init__.py  browser_automation_type_a.py  const.py  delay_calculation.py  delay_ease_main.py  main.py  service.py  ticket_data_extraction.py  utils.py
src/delay_ease/builders/: func_builder.py  prompt_builder.py
